--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,12 +2,19 @@ site_name: Razmjena
 site_description: Razmjena je interaktivna baza podataka znanstvenih grupa koje djeluju na istraživačkim i visokoškolskim ustanovama u Hrvatskoj.
 site_author: Vedran Miletić
 site_url: https://razmjena.org/
-copyright: Autorska prava &copy; <a href="https://gaseri.org/hr/">Grupa za aplikacije i usluge na eksaskalarnoj istraživačkoj infrastrukturi</a> 2022. Sva prava pridržana.
+copyright: Autorska prava &copy; <a href="https://gaseri.org/hr/">Grupa za aplikacije i usluge na eksaskalarnoj istraživačkoj infrastrukturi</a> 2022. Sva prava pridržana. <a href="#__consent">Promjena postavki kolačića</a>.
 repo_url: https://github.com/razmjena/razmjena/
 edit_uri: blob/main/docs/
 
 theme:
   name: material
+extra:
+  analytics:
+    provider: google
+    property: G-WGBKHXW2YF
+  consent:
+    title: Cookie consent
+    description: Koristimo kolačiće za prepoznavanje vaših ponovnih posjeta, pohranu vaših preferencija i mjerenje učinkovitosti našeg web sjedišta. Svojim pristankom nam pomažete poboljšati naše web sjedište kako bi na njemu budući posjetitelji lakše pronašli ono što žele.
 plugins:
   - search
   - social
