Updated GitHub Actions workflow

--- a/.github/workflows/mkdocs-gh-pages.yml
+++ b/.github/workflows/mkdocs-gh-pages.yml
@@ -34,15 +34,22 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+      - name: Install yamllint
+        run: pip install yamllint
+      - name: Check MkDocs YAML configuration
+        run: yamllint ./mkdocs.yml
+        continue-on-error: true
+      - name: Check Markdown files
+        uses: DavidAnson/markdownlint-cli2-action@v16
+        with:
+          globs: '**/*.md'
+        continue-on-error: true
       - name: Install required packages
         run: pip install -r requirements.txt
-      - name: Setup caching
-        uses: actions/cache@v4
-        with:
-          key: ${{ github.sha }}
-          path: .cache
       - name: Build site (_site directory name is used for Jekyll compatiblity)
         run: mkdocs build --config-file ./mkdocs.yml --strict --site-dir ./_site
+        env:
+          CI: true
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
