--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,8 @@ site_description: >-
 site_author: Vedran Miletić
 site_url: https://razmjena.github.io/
 copyright: >-
-  Autorska prava &copy; <a href="https://gaseri.org/hr/">Grupa za aplikacije i usluge na eksaskalarnoj istraživačkoj infrastrukturi</a> 2022 – 2024.
+  Autorska prava &copy; <a href="https://gaseri.org/hr/">Grupa za aplikacije i
+  usluge na eksaskalarnoj istraživačkoj infrastrukturi</a> 2022 – 2024.
   Sva prava pridržana. <a href="#__consent">Promjena postavki kolačića</a>.
 repo_url: https://github.com/razmjena/razmjena.github.io/
 edit_uri: edit/main/docs/
